--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-This is the page of focusonmx
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        This is the page of focusonmx
+    </body>
+</html>
+
+
+
